--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -41,13 +41,13 @@
                         <table class="table align-items-center mb-2 table-collapse">
                             <thead>
                             <tr>
-                                <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 align-middle responsive__mobile-1">
+                                <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder align-middle responsive__mobile-1">
                                     Select
                                 </th>
-                                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 w-100">
+                                <th class="text-uppercase text-secondary text-xxs font-weight-bolder w-100">
                                     Task
                                 </th>
-                                <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 responsive__mobile-1">
+                                <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder responsive__mobile-1">
                                     Details
                                 </th>
                             </tr>
