--- a/inventory/templates/inventory_packaging.html
+++ b/inventory/templates/inventory_packaging.html
@@ -21,6 +21,7 @@
 
 {% block content %}
 
+{% for target_branch in target_branches %}
     <div class="row">
         <div class="col-12">
             <div class="card mb-4">
@@ -28,7 +29,6 @@
                     <div class="table-responsive p-0">
                         <table class="table align-items-center mb-2 table-collapse">
 
-                            {% for target_branch in target_branches %}
                                 <thead>
                                     <tr class="title">
                                         <th colspan="4">
@@ -38,16 +38,16 @@
                                 </thead>
                                 <thead>
                                     <tr>
-                                        <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 align-middle responsive__mobile-1">
+                                        <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder align-middle responsive__mobile-1">
                                             Select
                                         </th>
-                                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
+                                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder">
                                             Product
                                         </th>
-                                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 responsive__hide responsive__mobile-1">
+                                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder responsive__hide responsive__mobile-1">
                                             Storages
                                         </th>
-                                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 responsive__mobile-1">
+                                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder responsive__mobile-1">
                                             Needed
                                         </th>
                                     </tr>
@@ -133,7 +133,6 @@
                                         {% endif %}
                                     {% endif %}
                                 {% endfor %}
-                            {% endfor %}
 
                             </tbody>
                         </table>
@@ -143,6 +142,7 @@
             </div>
         </div>
     </div>
+{% endfor %}
 
 
 <script src="{% static 'js/tables_appearence.js' %}"></script>
