--- a/inventory/templates/inventory_shopping.html
+++ b/inventory/templates/inventory_shopping.html
@@ -29,10 +29,10 @@
                                     <th style="width: 80px;" class="text-center text-uppercase text-secondary text-xxs font-weight-bolder align-middle responsive__mobile-1">
                                         Select
                                     </th>
-                                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder">
+                                    <th class="w-20 text-uppercase text-secondary text-xxs font-weight-bolder">
                                         Product
                                     </th>
-                                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder responsive__hide responsive__mobile-1">
+                                    <th class="w-100 text-uppercase text-secondary text-xxs font-weight-bolder responsive__hide responsive__mobile-1">
                                         Storages
                                     </th>
                                     <th class="text-uppercase text-secondary text-xxs font-weight-bolder responsive__mobile-1">
@@ -58,7 +58,7 @@
                                             </div>
                                         </div>
                                     </td>
-                                    <td>
+                                    <td class="responsive__product">
                                         <div class="d-flex align-items-center">
                                             <label for="checkbox{{ forloop.counter }}" class="sr-only">Select {{ product.name }}</label>
                                             <h6 class="mb-0 text-sm responsive__mobile-3">
@@ -103,11 +103,13 @@
                                     </div>
                                     </td>
 
-                                    <td class="buy-column">
+                                    <td>
+                                        <div class="buy-column">
                                         <label for="checkbox{{ forloop.counter }}">
                                             <span class="value">{{ product.value_oos|floatformat:2 }}</span>
                                             <span class="unit">{{ product.unit.all|join:", " }}</span>
                                         </label>
+                                            </div>
                                     </td>
 
                                   </tr>
