add: to_json filter for templates

--- a/iaroapp/templates/index.html
+++ b/iaroapp/templates/index.html
@@ -1,5 +1,6 @@
 {% extends "base_generic.html" %}
 {% load static %}
+{% load json_filters %}
 
 {% block content %}
 
@@ -448,7 +449,7 @@
 <script src="{% static 'softTheme/js/plugins/chartjs.min.js' %}"></script>
 <script>
     //console.log('{{ statistics | escapejs }}');
-    var statistics = JSON.parse('{{ statistics_json | escapejs }}');
+    var statistics = JSON.parse('{{ statistics | to_json | escapejs }}');
 
     var ctx1 = document.getElementById("chart-line1").getContext("2d");
     var ctx2 = document.getElementById("chart-line2").getContext("2d");
