--- a/iaroapp/static/css/tables.css
+++ b/iaroapp/static/css/tables.css
@@ -40,6 +40,34 @@ table tr.entry:hover {
     border-collapse: collapse;
 }
 
+/* Tasks specific */
+.entry td {
+    padding: 0.4rem 0;
+}
+.task-description {
+    background-color: rgba(236, 196, 55, 0.08);
+    flex-wrap: wrap;
+    flex-direction: column;
+    word-wrap: break-word;
+    white-space: normal;
+    align-items: flex-start;
+    align-content: flex-start;
+    text-align: left;
+    padding: 0.4rem;
+}
+.task-description h1 {
+    display: none; /* todo: fix styles in editor and remove this property */
+}
+.task-description p {
+    scale: 0.85;
+    transform-origin: left center;
+    margin: 0;
+}
+.descriptionLink svg {
+    scale: 1.25;
+}
+
+
 /* Packaging/Shopping storage badges */
 .responsive__show {
     display: none;
@@ -57,6 +85,12 @@ table tr.entry:hover {
     gap: 0.5rem;
 }
 
+.no-select {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
 
     .responsive__badges {
         flex-wrap: wrap;
@@ -123,11 +157,11 @@ table tr.entry:hover {
 
     @media (max-width: 392px) {
         .responsive__mobile-1 {
-            padding: 0.5rem !important;
+            padding: 0.6rem !important;
             width: 36px !important;
         }
 
         .responsive__mobile-2 {
-            padding: 0.5rem !important;
+            padding: 0.6rem !important;
         }
     }
