--- a/inventory/templates/inventory_packaging.html
+++ b/inventory/templates/inventory_packaging.html
@@ -32,19 +32,19 @@
                                 <thead>
                                     <tr class="title">
                                         <th colspan="4">
-                                            <h6 style="margin-top: 20px">Deliver to {{ target_branch }}</h6>
+                                            <h6>Deliver to {{ target_branch }}</h6>
                                         </th>
                                     </tr>
                                 </thead>
                                 <thead>
                                     <tr>
-                                        <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder align-middle responsive__mobile-1">
+                                        <th class="w-4 text-center text-uppercase text-secondary text-xxs font-weight-bolder align-middle responsive__mobile-1">
                                             Select
                                         </th>
-                                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder">
+                                        <th class="w-20 w-responsive__product text-uppercase text-secondary text-xxs font-weight-bolder">
                                             Product
                                         </th>
-                                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder responsive__hide responsive__mobile-1">
+                                        <th class="w-100 text-uppercase text-secondary text-xxs font-weight-bolder responsive__hide responsive__mobile-1">
                                             Storages
                                         </th>
                                         <th class="text-uppercase text-secondary text-xxs font-weight-bolder responsive__mobile-1">
@@ -60,8 +60,8 @@
                                         {% if product.needs_packaging and target_branch in product.get_storage_branches %}
 
                                             <tr class="entry">
-                                                <td style="width: 80px;">
-                                                    <div class="d-flex px-4 responsive__mobile-2">
+                                                <td>
+                                                    <div class="d-flex justify-content-center responsive__mobile-2" >
                                                         <div class="form-check">
                                                             <div class="checkbox-wrapper">
                                                                 <input class="form-check-input flex-shrink-0"
@@ -97,7 +97,7 @@
                                                 </td>
 
                                                 <!-- Product Storages Display Laptop-->
-                                                <td class="responsive__hide" style="width: 100%;">
+                                                <td class="responsive__hide">
                                                     <div class="badge-wrap d-flex align-items-center">
                                                         {% for product_storage in product.product_storages.all %}
                                                             {% if not product_storage.main_storage and product_storage.oos and product_storage.branch == target_branch %}
@@ -115,18 +115,20 @@
                                                 </td>
 
                                                 <td>
-                                                    <label for="checkbox{{ forloop.counter }}" class="mb-0">
-                                                        <div class="d-flex align-items-center">
-                                                        <h6 class="mb-0 text-sm">
-                                                            {% for product_storage, data in product.get_oos_value_shipping.items %}
-                                                                {% if product_storage == target_branch %}
-                                                                    {{ data.value_needed|floatformat:2 }}
-                                                                {% endif %}
-                                                            {% endfor %}
-                                                            {{ product.unit.all|join:", " }}
-                                                        </h6>
+                                                    <div class="d-flex align-items-center units-wrap">
+                                                        <div class="units-column d-flex">
+                                                            <h6 class="mb-0 text-sm value">
+                                                                {% for product_storage, data in product.get_oos_value_shipping.items %}
+                                                                    {% if product_storage == target_branch %}
+                                                                        {{ data.value_needed|floatformat:2 }}
+                                                                    {% endif %}
+                                                                {% endfor %}
+                                                            </h6>
+                                                            <h6 class="mb-0 me-2 ms-1 text-sm unit">
+                                                                {{ product.unit.all|join:", " }}
+                                                            </h6>
                                                         </div>
-                                                    </label>
+                                                    </div>
                                                 </td>
                                             </tr>
 
