tables minor responsivity updates

--- a/inventory/templates/inventory_packaging.html
+++ b/inventory/templates/inventory_packaging.html
@@ -85,7 +85,7 @@
                                                             {% if not product_storage.main_storage and product_storage.oos and product_storage.branch == target_branch %}
                                                                 <span class="badge bg-secondary-subtle border border-secondary-subtle text-secondary">
                                                                     <div class="d-flex align-items-center">
-                                                                        <svg class="bi" width="16" height="16">
+                                                                        <svg class="bi me-1" width="16" height="16">
                                                                             <circle cx="8" cy="8" r="7" fill="{{ product_storage.storage.color }}" stroke="#cbd3da"></circle>
                                                                         </svg>
                                                                         {{ product_storage.storage.name }}
