--- a/iaroapp/static/css/tables.css
+++ b/iaroapp/static/css/tables.css
@@ -109,11 +109,13 @@ table tr.entry:hover {
             gap: 0.5rem;
         }
         .badge {
+            font-size: 9px;
+            padding: 0.15rem 0.25rem;
             word-wrap: break-word;
             white-space: normal;
         }
         .badge svg {
-            width: 26px;
+            margin-bottom: 1px;
         }
         .responsive__product {
             width: 100%;
