--- a/iaroapp/static/css/tables.css
+++ b/iaroapp/static/css/tables.css
@@ -3,18 +3,6 @@
     scale: 0.85;
 }
 
-.descriptionLink svg {
-    transition: transform 0.2s ease-in-out;
-    scale: 1.05;
-    stroke-width: 1;
-    color: rgba(20, 23, 39, 0.8);
-}
-
-.descriptionLink svg:hover {
-    transform: scale(1.35);
-    cursor: pointer;
-}
-
 table tr.entry:hover {
     background-color: rgba(20,23,39,0.05);
     cursor: pointer;
@@ -43,6 +31,21 @@ table tr.entry:hover {
 /* Tasks specific */
 .entry td {
     padding: 0.4rem 0;
+}
+.descriptionLink {
+    width: 100px;
+}
+
+.descriptionLink svg {
+    transition: transform 0.2s ease-in-out;
+    scale: 1.05;
+    stroke-width: 1;
+    color: rgba(20, 23, 39, 0.8);
+}
+
+.descriptionLink svg:hover {
+    transform: scale(1.25);
+    cursor: pointer;
 }
 .task-description {
     background-color: rgba(236, 196, 55, 0.08);
