--- a/ratings/templates/ratings_evaluation.html
+++ b/ratings/templates/ratings_evaluation.html
@@ -1,11 +1,26 @@
 {% extends "base_generic.html" %}
+{% load static %}
+{% load json_filters %}
 
 {% block content %}
 
-{% load static %}
-
 <div class="row">
-    <!-- TODO(Rapha): add team mood -->
+    <div class="col-lg-12 mb-4">
+        <div class="card z-index-2">
+            <div class="card-header pb-0">
+                <h6>Team mood</h6>
+                <p class="text-sm">
+                    <i class="fa fa-heart text-success"></i>
+                    <span class="font-weight-bold">How is the team doing?</span>
+                </p>
+            </div>
+            <div class="card-body p-3">
+                <div class="chart">
+                    <canvas id="chart-line1" class="chart-canvas" height="300"></canvas>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 <div class="row">
@@ -51,6 +66,94 @@
     </div>
     {% endfor %}
 </div>
+
+<script src="{% static 'softTheme/js/plugins/chartjs.min.js' %}"></script>
+<script>
+    var team_ratings = JSON.parse('{{ teamRatings | to_json | escapejs }}');
+
+    var ctx = document.getElementById("chart-line1").getContext("2d");
+
+    var gradientStroke = ctx.createLinearGradient(0, 230, 0, 50);
+    gradientStroke.addColorStop(1, 'rgba(255,136,0,0.2)');
+    gradientStroke.addColorStop(0.2, 'rgba(255,193,121,0.0)');
+    gradientStroke.addColorStop(0, 'rgba(255,221,182,0)'); //orange colors
+
+    new Chart(ctx, {
+      type: "line",
+      data: {
+        labels: team_ratings['dates'],
+        datasets: [{
+            label: "Work hours",
+            tension: 0.4,
+            borderWidth: 0,
+            pointRadius: 0,
+            borderColor: "orange",
+            borderWidth: 3,
+            backgroundColor: gradientStroke,
+            fill: true,
+            data: team_ratings['ratings'],
+            maxBarThickness: 6
+          },
+        ],
+      },
+      options: {
+        spanGaps: true,
+        responsive: true,
+        maintainAspectRatio: false,
+        plugins: {
+          legend: {
+            display: false,
+          }
+        },
+        interaction: {
+          intersect: false,
+          mode: 'index',
+        },
+        scales: {
+          y: {
+            grid: {
+              drawBorder: false,
+              display: true,
+              drawOnChartArea: true,
+              drawTicks: false,
+              borderDash: [5, 5]
+            },
+            ticks: {
+              display: true,
+              padding: 10,
+              color: '#b2b9bf',
+              font: {
+                size: 11,
+                family: "Open Sans",
+                style: 'normal',
+                lineHeight: 2
+              },
+            }
+          },
+          x: {
+            grid: {
+              drawBorder: false,
+              display: false,
+              drawOnChartArea: false,
+              drawTicks: false,
+              borderDash: [5, 5]
+            },
+            ticks: {
+              display: true,
+              color: '#b2b9bf',
+              padding: 20,
+              font: {
+                size: 11,
+                family: "Open Sans",
+                style: 'normal',
+                lineHeight: 2
+              },
+            }
+          },
+        },
+      },
+    });
+</script>
 
 <style>
     .avatar-img {
