fix: minor wording mistake

--- a/ratings/templates/ratings_evaluation.html
+++ b/ratings/templates/ratings_evaluation.html
@@ -83,7 +83,7 @@
       data: {
         labels: team_ratings['dates'],
         datasets: [{
-            label: "Rating",
+            label: "Ratings average",
             tension: 0.4,
             borderWidth: 0,
             pointRadius: 0,
